[gd_scene load_steps=3 format=3 uid="uid://dm7scsrhl5veb"]

[ext_resource type="Script" uid="uid://bxyrbygaykot2" path="res://scripts/menu/frame/frame.gd" id="1_ypjpf"]
[ext_resource type="Texture2D" uid="uid://b7x8mr5rgtixk" path="res://scenes/menu/frame/frame.png" id="2_x1h3u"]

[node name="Frame" type="ColorRect"]
custom_minimum_size = Vector2(300, 200)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 0.478431)
script = ExtResource("1_ypjpf")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 40

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer"]
self_modulate = Color(0.31, 0.31, 0.31, 1)
layout_mode = 2
texture = ExtResource("2_x1h3u")
patch_margin_left = 40
patch_margin_top = 40
patch_margin_right = 40
patch_margin_bottom = 40

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 70
theme_override_constants/margin_top = 70
theme_override_constants/margin_right = 70
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/NinePatchRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="FrameLabel" type="Label" parent="MarginContainer/NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 0
text = "Credits"

[node name="CloseButton" type="Button" parent="MarginContainer/NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Close"

[node name="ContentContainer" type="ScrollContainer" parent="MarginContainer/NinePatchRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="MarginContainer/NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
